--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <footer>
       <p>
-        by
+        Developed by
         <a href="https://links.phricardo.com.br/" target="_blank"
           >@phricardorj</a
         >
