--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex" />
     <meta name="googlebot" content="noindex" />
 
-    <title>Semana Atual: Programa Desenvolve 2022</title>
+    <title>Programa Desenvolve 2022: Guia</title>
 
     <link rel="stylesheet" href="assets/styles/index.css" />
   </head>
@@ -15,6 +15,7 @@
     <header>
       <h1>Semana atual do Programa Desenvolve 2022!</h1>
       <p>Feito com 💚 especialmente para você!</p>
+      <p class="date">🕗 <span id="data-hora"></span></p>
     </header>
 
     <main>
@@ -44,6 +45,7 @@
         >
       </p>
     </footer>
+
     <script src="assets/js/index.js" type="module"></script>
   </body>
 </html>
