--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
     </main>
 
     <footer>
-      <p>
+      <h1>Gostou 😍? Conheça minhas redes!</h1>
+      <p>Estou sempre compartilhando conteúdos didáticos sobre programação!</p>
+      <a class="btn" href="https://links.phricardo.com.br/" target="_blank"
+        >Quero conhecer agora!!</a
+      >
+      <p class="credits">
         Developed by
         <a href="https://links.phricardo.com.br/" target="_blank"
           >@phricardorj</a
