--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <h1>Semana atual do Programa Desenvolve 2022!</h1>
       <p>Feito com 💚 especialmente para você!</p>
-      <p class="date">🕗 <span id="data-hora"></span></p>
+      <p class="date">🕗 <span id="data-hora">Carregando...</span></p>
     </header>
 
     <main>
