--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Programa Desenvolve 2022: Guia</title>
 
     <link rel="stylesheet" href="assets/styles/index.css" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FD3QGDDRLR"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-FD3QGDDRLR');
+    </script>
   </head>
   <body>
     <header>
