--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <title>Programa Desenvolve 2022: Guia</title>
 
     <link rel="stylesheet" href="assets/styles/index.css" />
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FD3QGDDRLR"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FD3QGDDRLR"
+    ></script>
     <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
-     gtag('config', 'G-FD3QGDDRLR');
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-FD3QGDDRLR");
     </script>
   </head>
   <body>
+    <!-- modal -->
+    <div id="modal"></div>
+    <!-- end - modal -->
+
     <header>
       <h1>Semana atual do Programa Desenvolve 2022!</h1>
       <p>Feito com 💚 especialmente para você!</p>
