--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
           <div>Início do programa: <span>17/01/2022</span></div>
           <div>Formatura: <span>27/10/2022</span></div>
         </div>
+        <p class="important">
+          <strong>Importante:</strong> Conclua 70% para participar da formatura
+          e obter seu certificado!
+        </p>
       </section>
     </main>
 
