--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <div>Formatura: <span>27/10/2022</span></div>
         </div>
         <p class="important">
-          <strong>Importante:</strong> Conclua 70% para participar da formatura
-          e obter seu certificado!
+          <strong>Importante:</strong> Conclua 70% dos Cursos para participar da
+          formatura e obter seu certificado!
         </p>
       </section>
     </main>
