--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
       <section class="info">
         <h1>🚀 Informações do Programa:</h1>
         <div class="info_container">
-          <div>Início do programa: <span>17/01/2022</span></div>
-          <div>Formatura: <span>27/10/2022</span></div>
+          <div>Início do programa: <span>17/01</span></div>
+          <div>Contrata e Desenvolve: <span>28/09 e 29/09</span></div>
+          <div>Formatura: <span>27/10</span></div>
         </div>
         <p class="important">
           <strong>Importante:</strong> Conclua 70% dos Cursos para participar da
