--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </script>
   </head>
   <body>
-    <!-- modal -->
+    <!-- 
     <div id="modal"></div>
-    <!-- end - modal -->
+     -->
 
     <header>
       <h1>Semana atual do Programa Desenvolve 2022!</h1>
@@ -74,6 +74,6 @@
       </p>
     </footer>
 
-    <script src="assets/js/index.js" type="module"></script>
+    <!-- <script src="assets/js/index.js" type="module"></script> -->
   </body>
 </html>
