--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
           <div>Total de Semanas: <span id="totalWeeks"></span></div>
         </div>
       </section>
-
+      
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1485470450371479"
+     crossorigin="anonymous"></script>
+<!-- desenvolve ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1485470450371479"
+     data-ad-slot="8244064719"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+      
       <section class="info">
         <h1>🚀 Informações do Programa:</h1>
         <div class="info_container">
