--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       gtag("js", new Date());
       gtag("config", "G-FD3QGDDRLR");
     </script>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1485470450371479"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="modal"></div>
